test/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-go-app
  template:
    metadata:
      labels:
        app: my-go-app
    spec:
      containers:
        - name: my-go-app
          image: myrepo/myimage:latest
          ports:
            - containerPort: 8080
          envFrom:
            - configMapRef:
                name: my-go-app-config
