test/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-go-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: my-go-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-go-app
                port:
                  number: 8080
