test/infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-app
  namespace: default
spec:
  selector:
    app: my-go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
